--- a/Hybrid_Applications/React_Native_Exercise/package.json
+++ b/Hybrid_Applications/React_Native_Exercise/package.json
@@ -6,14 +6,15 @@
     "eject": "expo eject"
   },
   "dependencies": {
-    "expo": "^32.0.0",
+    "braces": "^2.3.2",
+    "expo": "^32.0.6",
     "react": "16.5.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-32.0.0.tar.gz",
     "react-native-swiper": "^1.5.14",
     "react-native-timer-native": "^2.0.1"
   },
   "devDependencies": {
-    "babel-preset-expo": "^5.0.0"
+    "babel-preset-expo": "^5.2.0"
   },
   "private": true
 }
